--- a/kui-common/src/main/resources/storage.properties
+++ b/kui-common/src/main/resources/storage.properties
@@ -1,6 +1,16 @@
-storage.host =
-storage.port = 9142
-storage.username =
-storage.password = 
-storage.keystore.path = cassandra_client.truststore
-storage.keystore.password = 
+# Storage type (cassandra/dynamodb)
+storage.type = dynamodb
+
+# Cassandra
+cassandra.keyspace = whiteice3
+cassandra.host =
+cassandra.port = 9142
+cassandra.username =
+cassandra.password =
+cassandra.keystore.path = cassandra_client.truststore
+cassandra.keystore.password =
+
+# DynamoDB
+dynamodb.username =
+dynamodb.password =
+dynamodb.region =
