--- a/kui-client/build.gradle
+++ b/kui-client/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
     compile group: 'org.pojava', name: 'datetime', version: '1.0.2'
+    compile 'com.neovisionaries:nv-websocket-client:2.3'
 
     compile project(':kui-api')
 
