--- a/kui-common/src/main/resources/storage.properties
+++ b/kui-common/src/main/resources/storage.properties
@@ -1,4 +1,4 @@
-# Storage type (cassandra/dynamodb)
+# Storage type (cassandra/dynamodb/h2)
 storage.type = dynamodb
 
 # Cassandra
@@ -14,3 +14,9 @@ cassandra.keystore.password =
 dynamodb.username =
 dynamodb.password =
 dynamodb.region =
+
+# H2
+h2.jdbc.driver = org.h2.Driver
+h2.jdbc.url = jdbc:h2:./target/database;CIPHER=AES
+h2.jdbc.user = sa
+h2.jdbc.password = filepassword userpassword
