--- a/kui-client/src/main/resources/client.properties
+++ b/kui-client/src/main/resources/client.properties
@@ -1,10 +1,10 @@
-# Agent settings
+# Client settings
 host.environment.type =
 host.environment = 
 host.type =
 host =
 
-appender.log = /var/log/white-ice-agent.log
+appender.log = kui-client.log
 
 # Comma separated list of log file paths.
 logs =
