--- a/kui-common/src/main/resources/storage.properties
+++ b/kui-common/src/main/resources/storage.properties
@@ -2,7 +2,7 @@
 storage.type = dynamodb
 
 # Cassandra
-cassandra.keyspace = whiteice3
+cassandra.keyspace = kui
 cassandra.host =
 cassandra.port = 9142
 cassandra.username =
