--- a/kui-common/src/main/resources/security.properties
+++ b/kui-common/src/main/resources/security.properties
@@ -1,5 +1,5 @@
 system.encryption.key=
 default.admin.user.name=default.admin
 default.admin.user.password=password1234
-default.agent.user.name=default.agent
-default.agent.user.password=password1234
+default.client.user.name=default.client
+default.client.user.password=password1234
