Implemented SmtpUtil unit test.

--- a/kui-core/build.gradle
+++ b/kui-core/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     compile project(':kui-common')
 
+    testCompile 'org.jvnet.mock-javamail:mock-javamail:1.9'
     testCompile 'junit:junit:4.12'
 }
 
